Wed Sep 04 11:29:03 2002  George Lebl <jirka@5z.com>

	* gui/greeter/greeter_item_pam.c: Apply patch from Havoc from bug
	  #91921 to fix word wrap for japanese and such

	* daemon/misc.[ch]: add a utility to unset signals, also unset
	  signals and do setsid in the extra process.

	* daemon/slave.c, daemon/misc.c, daemon/display.c, daemon/gdm.c:
	  Use the above function to unset signals in children.  Also unlink
	  .xsession-errors before openning it just to be anal (and to work
	  even if the user used some older gdms that made the file have
	  root permissions and such nonsense).  Also when killing the extra
	  process kill the whole process group in case the extra process
 	  makes children.

Fri Aug 30 12:22:19 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.11

Fri Aug 30 12:20:40 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/server.c: Fix test on fork to avoid
	  duplicate slave processes.  This makes things actually work
	  on subsequent logins.  Also note a timeout of a message in
	  the syslog if we can.

Fri Aug 30 10:11:15 2002  George Lebl <jirka@5z.com>

	* configure.in: we no longer need libglade-convert so don't check for
	  it

Tue Aug 27 18:41:17 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.10

Tue Aug 27 18:40:11 2002  George Lebl <jirka@5z.com>

	* gdm-safe-restart.in, gdm-restart.in, gdm-stop.in: use the
	  expanded version of the sysconf prefix to fix installation
	  into weird prefixes

Tue Aug 27 18:35:16 2002  George Lebl <jirka@5z.com>

	* daemon/server.c: tiny bit of cleanup

Tue Aug 27 18:14:20 2002  George Lebl <jirka@5z.com>

	* daemon/slave.c: when we get the term signal do cleanup but no
	  longer wait for message ackgnoledgement from the daemon since the
	  daemon may no longer be entering mainloop and may not even be
	  processing messages.

Sat Aug 24 18:40:25 2002  George Lebl <jirka@5z.com>

	* Release 2.4.0.9

Fri Aug 23 16:45:16 2002  George Lebl <jirka@5z.com>
